new style pixel

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ ul li {
     justify-content: space-between;
 }
 .bg-image-header {
-    background-image: url(./img/ukraine-7046944_1920.png);
+    background-image: url(./img/ukraine-7046944_1920.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: bottom center;
